[tool.poetry]
name = "research-engine"
version = "0.1.0"
description = "data analysis using Pandas AI powered by LLM"
authors = ["Poornachandra102 <poornachandra@4gd.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.0"
langchain-openai = "^0.1.19"
pandasai = "^2.2.12"
tabulate = "^0.9.0"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
